<resources>
    <string name="app_name">Film</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="tv_show">TV Shows</string>
    <string name="films">Movies</string>
    <string name="film_detail">Movie Detail</string>
    <string name="tv_detail">TV Show Detail</string>
    <string name="overview_title">Overview</string>
    <string name="overview">overview example</string>
    <string name="user_score_text">User Score</string>
    <string name="share">Share</string>
    <string name="production_title">Production Companies</string>
    <string name="production">Production Companies Name</string>
    <string name="creator_title">Creator</string>
    <string name="creator">Creator Name</string>
    <string name="info">%1$s • %2$s • %3$dm</string>
    <string name="share_film">Watch %1$s on new Film App!</string>
    <string name="empty_movie">No Movie Available</string>
    <string name="empty_tv_show">No TV Show Available</string>
    <string name="empty_favorite_movie">No Favorite Movie Available</string>
    <string name="empty_favorite_tv_show">No Favorite TV Show Available</string>
    <string name="unknown">Unknown</string>
    <string name="favorite">Favorite</string>
    <string name="menu_favorite">Menu Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_highest">Highest</string>
    <string name="menu_lowest">Lowest</string>
    <string name="menu_random">Random</string>
</resources>